# RFNL

./: .gitignore  CMakeLists.txt  README.md
doc/: CodeStruct
src/: CMakeLists.txt  Init.c
src/DFT/: BitRev.h  BitRev_Generic.c  BitRev_Gnrc.c  DFT.h  DFT_Generic.c  DFT_Gnrc.c  _BitRev_Generic.h  _BitRev_Generic.rc  _BitRev_Gnrc.h  _BitRev_Gnrc.rc  _DFT_Arch.h  _DFT_Arch.rc  _DFT_Generic.h  _DFT_Generic.rc  _DFT_Gnrc.h  _DFT_Gnrc.rc
src/FMath/: FMath.c  FMath.h  _FMath_Comm.h  _FMath_Comm.rc  _FMath_Gnrc.h  _FMath_Pk_Gnrc.h
src/FWindow/: FWindow_Gnrc.c  _FWindow_Gnrc.h  _FWindow_Gnrc.rc
src/Include/: RFNL.h
src/Interp/: Interp.h  MapStretch_Gnrc.c  _GenPeak_Gnrc.rc  _InterpBase_Gnrc.h  _MapStretch_Gnrc.h  _MapStretch_Gnrc.rc  _MapStretch_Gnrc_Base.rc  _MatchInterp_Gnrc.h  _MatchInterp_Gnrc_Base.rc  _Resample_Gnrc_Base.rc
src/Vec/: Vec.h  VecBasic_Gnrc.c  VecMath_Gnrc.c  _VecBasic_Gnrc.h  _VecBasic_Gnrc.rc  _VecMath_Gnrc.h  _VecMath_Gnrc.rc
test/: CMakeLists.txt
test/TestDFT/: main.c
test/TestInterp/: main.c
test/TestMath/: main.c
test/TestVec/: main.c
test/TestWindow/: main.c
